--- a/Cubes/Cubes.csproj
+++ b/Cubes/Cubes.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="CollisionCalculator.cs" />
     <Compile Include="Cube.cs" />
+    <Compile Include="InputParser.cs" />
     <Compile Include="Prism.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
